# vblog

./: .gitignore  README.md  requirements.txt
homework_03/: Dockerfile  pyproject.toml
homework_03/app/: main.py
homework_03/app/views/: views.py
homework_06/: alembic.ini  docker-compose.yml  pyproject.toml
homework_06/app/: about.py  alembic.ini  app.py  config.py  get_data.py  main.py  old_main.py  pyproject.toml
homework_06/app/migrations/: env.py
homework_06/app/migrations/versions/: b3f50dd50d76_init.py
homework_06/app/models/: __init__.py  base.py  models.py  post.py  user.py
homework_06/app/templates/: about.html  back-to-index.html  base.html
homework_06/app/templates/posts/: add.html  delete.html  details.html  list.html
homework_06/app/views/: __init__.py  crud.py  posts.py  products.py
homework_06/app/views/products/: views.py
homework_06/docker-build/: Dockerfile  Dockerfile-local  entrypoint.sh
homework_06/templates/: base.html  index.html
homework_06/templates/posts/: add.html  back-to-posts-list.html  list.html
homework_07/: pyproject.toml
homework_07/src/posts/: models.py  views.py
homework_07/src/posts/migrations/: 0001_initial.py
homework_07/src/users/: models.py  views.py
homework_07/src/users/migrations/: 0001_initial.py
homework_07/src/vblog/: asgi.py  settings.py  urls.py
homework_07/vblog/: manage.py
homework_07/vblog/vblog/: settings.py  urls.py  wsgi.py
vblog/: pyproject.toml
vblog/src/myauth/: models.py  views.py
vblog/src/posts/: forms.py  models.py
vblog/src/posts/migrations/: 0001_initial.py  0002_images_image.py  0003_alter_post_published_at.py
vblog/src/templates/: root.html
vblog/src/vblog/: settings.py
(+82 files in other folders)
