[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["redtomat87 <mr_tomat@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
