[tool.poetry]
name = "homework-07"
version = "0.1.0"
description = ""
authors = ["redtomat87 <mr_tomat@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
poetry = "1.8.2"
Django = "^5.0.3"
django-debug-toolbar = "^4.3.0"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
